# sea

./: .gitignore  .travis.yml  CMakeLists.txt
include/sealib/: dyckmatchingstructure.h  dynamicbitsetextension.h  rankstructure.h  trailstructure.h
src/: dyckmatchingstructure.cpp  graphalgorithms.cpp  localdycktable.cpp  rankselect.cpp  rankstructure.cpp  simplerankselect.cpp
src_view/: dyckView.h  graphView.cpp  graphio.cpp  main.cpp
